--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "gh-pages": "^1.1.0"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "gh-pages": "^1.1.0",
+    "mongoose": "^5.0.7"
   },
   "devDependencies": {},
   "scripts": {
