--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "gh-pages": "^1.1.0",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2"
   },
   "devDependencies": {},
   "scripts": {
