--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,6 +6,10 @@
     {
       "path": "client/src/scss/Mixins.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "client/src/scss/Font.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -30,7 +34,8 @@
     {
       "path": "client/src/scss/App.scss",
       "imports": [
-        "client/src/scss/Variables.scss"
+        "client/src/scss/Variables.scss",
+        "client/src/scss/Font.scss"
       ]
     }
   ],
