--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,7 +35,8 @@
       "path": "client/src/scss/App.scss",
       "imports": [
         "client/src/scss/Variables.scss",
-        "client/src/scss/Font.scss"
+        "client/src/scss/Font.scss",
+        "client/src/scss/Mixins.scss"
       ]
     }
   ],
