--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "quizard-of-ahhhs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "gh-pages": "^1.1.0",
