--- a/package.json
+++ b/package.json
@@ -2,15 +2,25 @@
   "name": "quizard-of-ahhhs",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-mongo": "^1.3.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.4",
     "gh-pages": "^1.1.0",
     "mongoose": "^5.0.7",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.1.2"
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {},
   "scripts": {
