--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "gh-pages": "^1.1.0",
+    "html-entities": "^1.2.1",
     "mongoose": "^5.0.7",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2"
