--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quizard-of-ahhhs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
