--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.4",
-    "gh-pages": "^1.1.0",
     "html-entities": "^1.2.1",
     "mongoose": "^5.0.7",
     "morgan": "^1.8.2",
@@ -23,7 +22,9 @@
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  },
   "scripts": {
     "server": "node server.js",
     "client": "node scripts/start-client.js",
