--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "start": "concurrently \"nodemon server.js\" \"npm run client\"",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn && cd client && yarn",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "installDeps": "yarn && cd client && yarn"
   },
   "repository": {
     "type": "git",
