--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "concurrently \"nodemon server.js\" \"yarn run client\"",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn install && cd client && yarn install"
+    "installDeps": "npm install && cd client && npm install"
   },
   "repository": {
     "type": "git",
