--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
   "homepage": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.18.0",
+    "material-ui": "^0.18.7",
     "node-sass-chokidar": "0.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.1"
+    "react-scripts": "^1.1.1",
+    "react-tap-event-plugin": "^3.0.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
