--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "start": "concurrently \"nodemon server.js\" \"yarn run client\"",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "npm install && cd client && npm install"
+    "installDeps": "npm install && cd client && npm install",
+    "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
+  "cacheDirectories": [
+    "node_modules",
+    "react-ui/node_modules"
+  ],
   "author": "Bala Jenn Jill Sarah",
   "license": "ISC",
   "devDependencies": {
