--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node server",
     "client": "node scripts/start-client.js",
-    "start": "concurrently \"nodemon server.js\" \"yarn run client\"",
+    "start": "node server.js && yarn run client",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn"
