--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "node": ">= 9.7.1",
+    "npm": ">= 5.6.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "material-ui": "^0.18.7",
