--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-howler": "^3.7.1",
+    "react-player": "^1.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
     "react-tap-event-plugin": "^3.0.2"
