--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "html-entities": "^1.2.1",
+    "entities": "^1.1.1",
     "material-ui": "^0.18.7",
     "node-sass-chokidar": "0.0.3",
     "react": "^16.2.0",
