--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,7 @@
 env: flex
 runtime: nodejs
+
+env_variables:
+  # --REQUIRED--
+  DATABASE_URI: mongodb://admin:a4IVDfqvHbAcp0@ds251598.mlab.com:51598/quizardofahhhs
+  SERVER_URL: https://quizzard-of-ahhhs.appspot.com/
